# velosi

./: .env.example  LICENSE  README.md  RELEASE.md  index.html  notarize-release.sh  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: README.md  release-no-notarize.yml  release-no-signing.yml  release.yml  rust-tests.yml
data/: README.md  app-mappings.json  categories.json  url-mappings.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  TESTING.md  entitlements.plist  libtray.rlib  libwebsite_blocker.rlib  run_tests.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1_create_tables.sql  2_create_focus_mode_preferences.sql  3_add_blocking_preferences.sql  4_add_proxy_port.sql  5_create_pomodoro_tables.sql
src-tauri/src/: activity.rs  cache.rs  commands.rs  database.rs  database_tests.rs  firewall_blocker.rs  focus_mode.rs  focus_mode_tests.rs  lib.rs  local_proxy_blocker.rs  main.rs  migrations.rs  models.rs  proxy_integration_tests.rs  test_config.rs  tracker.rs  tracker_tests.rs  tray.rs
src-tauri/src/commands/: activity.rs  blocking.rs  category.rs  focus_mode.rs  mapping.rs  mod.rs  permissions.rs  pomodoro.rs  tracking.rs  window.rs
src-tauri/tests/: README.md
src/components/: ActivityDashboard.tsx  ActivityLog.tsx  AppMappingEditor.tsx  AppUsageTreemap.tsx  AppleEventsPermissionDialog.tsx  Categories.tsx  Categorization.tsx  CategoryUsagePieChart.tsx  CategoryUsageTreemap.tsx  Dashboard.tsx  DateRangeSelector.tsx  DateSelector.tsx  FocusMode.tsx  FocusOverlay.tsx  HourActivitiesModal.tsx  HourlyHeatmap.tsx  PomodoroPage.tsx  PomodoroTimer.tsx  ProxySetupGuide.tsx  RingChart.tsx  Settings.tsx  Sidebar.tsx  ThemeToggle.tsx  TimelineChart.tsx  TrackingControls.tsx
src/components/ui/: ErrorBoundary.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  tabs.tsx
src/contexts/: PomodoroContext.tsx
src/hooks/: useCategoryService.ts
src/lib/: categoryService.ts  updateService.ts  utils.ts
