[package]
name = "Velosi"
version = "0.1.0"
description = "Focus on your work"
authors = ["Ahmad Faiyaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "velosi_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
dirs = "5.0"
url = "2.5"
urlencoding = "2.1"
regex = "1.10"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "psapi",
    "winsock2",
    "ws2def",
    "iphlpapi",
    "tlhelp32",
    "shellapi",
    "combaseapi",
    "objbase",
    "oleauto",
    "winerror",
    "handleapi"
] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

